--- a/cloud/package.json
+++ b/cloud/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cookie-parse": "^0.4.0",
     "cors": "^2.8.5",
-    "socket.io": "~2.5.0"
+    "ws": "*",
+    "express": "*"
   }
 }
