Add rest message

--- a/cloud/package.json
+++ b/cloud/package.json
@@ -1,7 +1,11 @@
 {
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "cookie-parse": "^0.4.0",
     "cors": "^2.8.5",
-    "express": "*"
+    "express": "*",
+    "firebase": "^9.16.0"
   }
 }
